--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -97,6 +97,7 @@
 		tools:text="@string/last_alert_from" />
 
 	<com.liferay.alerts.widget.TextView
+		android:id="@+id/user_name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="@dimen/top_bar_user_name_margin_left"
