--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -69,6 +69,14 @@
 			android:paddingRight="@dimen/card_image_padding_right"
 			android:visibility="gone" />
 
+		<RadioGroup
+			android:id="@+id/choices"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_padding_left"
+			android:orientation="vertical"
+			android:visibility="gone" />
+
 		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
